# IEC-Testes-Automatizados

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: business.py  challenges.json  database.py  main.py  models.py
artefatos/: Links.txt
static/: style.css
templates/: base.html  index.html  result.html
tests/: conftest.py  test_integration.py  test_ui.py  test_unit.py
