[project]
name = "quiz-programacao"
version = "0.1.0"
description = "Quiz de programação com gamificação"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx2",
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: testes unitários",
    "integration: testes de integração",
    "e2e: testes end-to-end",
]
